--- a/gloo/virtual-service.yaml
+++ b/gloo/virtual-service.yaml
@@ -7,6 +7,9 @@ spec:
   virtualHost:
     domains:
     - '*'
+    options:
+      extauth:
+        customAuth: {}
     routes:
     - matchers:
       - prefix: /
